# apps/backend/src/setting/setting.controller.ts
@@ -4,22 +4,19 @@ import {
   Get,
   Post,
   Request,
-  UploadedFile,
   UploadedFiles,
   UseGuards,
   UseInterceptors,
 } from '@nestjs/common';
 import { ApiResponseDto, AuthGuard } from 'src/common';
 import { SettingServices } from './setting.services';
-import {
-  FileFieldsInterceptor,
-  FileInterceptor,
-} from '@nestjs/platform-express';
+import { FileFieldsInterceptor } from '@nestjs/platform-express';
 import { backendDtos } from '@repo/shared';
+import { FileSizeValidationPipe } from 'src/common/validation/fileValidation';
 
 @UseGuards(AuthGuard)
 @Controller('tenant/setting')
-export class TenantSetting {
+export class TenantSettingController {
   constructor(private readonly settingServices: SettingServices) {}
 
   @Get('')
@@ -30,15 +27,22 @@ export class TenantSetting {
 
   @Post('')
   @UseInterceptors(
-    FileFieldsInterceptor([
-      { name: 'logo', maxCount: 1 },
-      { name: 'favicon', maxCount: 1 },
-    ]),
+    FileFieldsInterceptor(
+      [
+        { name: 'logo', maxCount: 1 },
+        { name: 'favicon', maxCount: 1 },
+      ],
+      {
+        limits: {
+          fileSize: 10 * 1024 * 1024, // 10MB
+        },
+      },
+    ),
   )
   async createTenantSetting(
     @Request() req,
     @Body() dto: backendDtos.CreateTenantSettingDto,
-    @UploadedFiles()
+    @UploadedFiles(new FileSizeValidationPipe())
     files: { logo?: Express.Multer.File[]; favicon?: Express.Multer.File[] },
   ) {
     const logoFile = files.logo?.[0];
@@ -47,7 +51,13 @@ export class TenantSetting {
       logo: logoFile,
       favicon: faviconFile,
     });
-    return ApiResponseDto.success(data, 'Tenant settings updated');
+    return ApiResponseDto.success(data, 'Tenant settings created');
+  }
+
+  @Get('asset')
+  async getTenantAssets(@Request() req) {
+    const data = await this.settingServices.getTenantAssets(req);
+    return ApiResponseDto.success(data, 'Retreived tenant setting');
   }
 }
 
